<resources>
    <string name="app_name">WECARE</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="signupscan">Next</string>
    <string name="sign">Untuk melakukan pendaftaran silahkan upload KTP</string>
    <string name="slogan">Perlindungan Anak dan Perempuan</string>
    <string name="nik">NIK</string>
    <string name="nik1">15711021406000061</string>
    <string name="nama1">ARYA BRATA SENA ALHAQ</string>
    <string name="email1">aryabratasena@gmail.com</string>
    <string name="telp1">085215641298</string>
    <string name="jenis1">LAKI-LAKI</string>
    <string name="pass1">arya123</string>
    <string name="pass">Password</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="telp">No HP</string>
    <string name="jenis">Jenis Kelamin</string>
    <string name="ktp">Upload KTP</string>
    <string name="name">NAMA</string>
    <string name="age">20 Tahun</string>
    <string name="aduan">Aduan</string>
    <string name="terima">Diterima</string>
    <string name="tolak">Ditolak</string>
    <string name="menu">Menu</string>
    <string name="lapor1">Lapor</string>
    <string name="konsul1">Konsultasi</string>
    <string name="chat">Chatbot</string>
    <string name="panic">Panic Button</string>
    <string name="police">Police Call</string>
    <string name="profile">Profil</string>
    <string name="next">Lanjutkan</string>
    <string name="next1">Selesai</string>
    <string name="back">Kembali</string>
    <string name="address">Alamat</string>
    <string name="tmptlahir">Tempat Lahir</string>
    <string name="tgllahir">Tanggal Lahir</string>
    <string name="status">Status pelapor</string>
    <string name="jenis2">Jenis Kekerasan</string>
    <string name="urgent">Urgensi 10-100%</string>
    <string name="story">Kronologi Kejadian</string>
    <string name="tgljadi">Tanggal Kejadian</string>
    <string name="logout">Logout</string>
    <string name="note1">Anda menekan PANIC BUTTON</string>
    <string name="note2">Anda akan terhubung dengan tim KPPA</string>
</resources>